# cut-plp

./: .gitignore  CMakeLists.txt  README.md
lab-hrms/: CMakeLists.txt  README.md
lab-hrms/src/: Employee.cpp  Employee.h  HRMS.cpp  HRMS.h  main.cpp
lab-matrixes/: CMakeLists.txt  m2.txt  m3.txt  readme.md
lab-matrixes/matrix-lib/: CMakeLists.txt  matrix.cpp  matrix.h
lab-matrixes/sqlite-lib/: CMakeLists.txt
lab-matrixes/src/: exercise_matrix.cpp
lab-philosophers/: CMakeLists.txt
lab-philosophers/src/: main.cpp
lab1/: CMakeLists.txt  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp  readme.md  test.py
lab1/src/: exercise1.cpp  exercise3.cpp  exercise5.cpp
lab2/: CMakeLists.txt  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp  exercise6.cpp  readme.md
lab2/src/: exercise1.cpp
lab3/: CMakeLists.txt  exercise5.cpp  exercise_matrix.cpp  m1.txt  readme.md
lab3/matrix-lib/: CMakeLists.txt  matrix.cpp  matrix.h
test-template/: main.cpp
