cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 20)

project(LAB_2)
add_executable(LAB2_Ex1 exercise1.cpp)
add_executable(LAB2_Ex2 exercise2.cpp)
add_executable(LAB2_Ex3 exercise3.cpp)
add_executable(LAB2_Ex4 exercise4.cpp)
add_executable(LAB2_Ex5 exercise5.cpp)
add_executable(LAB2_Ex6 exercise6.cpp)