cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 20)

project(LAB_2)
add_executable(LAB2_Ex1 src/exercise1.cpp)
add_executable(LAB2_Ex2 src/exercise2.cpp)
add_executable(LAB2_Ex3 src/exercise3.cpp)
add_executable(LAB2_Ex4 src/exercise4.cpp)
add_executable(LAB2_Ex5 src/exercise5.cpp)
add_executable(LAB2_Ex6 src/exercise6.cpp)